--- a/index.html
+++ b/index.html
@@ -692,12 +692,12 @@
 				</div>
             </div>
 		</div>
-	</div>
+
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12">
-					<p style="text-align: center;">Project created to fulfill final project requirement for <a href="http://www.northwestern.edu">Northwestern University</a>'s EECS 349 Machine Learning class taught by Professor Doug Downey<br/>Contact the creators: <a href="mailto:michaelneuman2020@u.northwestern.edu">Michael Neuman</a> and <a href="mailto:aagamshah2017@u.northwestern.edu">Aagam Shah</p>
+					<p style="text-align: center;">Project created to fulfill final project requirement for <a href="http://www.northwestern.edu">Northwestern University</a>'s Spring Quarter 2017 EECS 349 Machine Learning class taught by Professor Doug Downey<br/>Contact the creators: <a href="mailto:michaelneuman2020@u.northwestern.edu">Michael Neuman</a> and <a href="mailto:aagamshah2017@u.northwestern.edu">Aagam Shah</p>
 				</div>
 			</div>
 		</div>
