--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 	<div id="fh5co-features" data-section="features" style="background-color: #6172F4">
 		<div class="container">
-			<div class="row">
+			<div class="row to-animate">
 				<div class="col-md-12 section-heading text-center">
 					<h2 class="single-animate animate-features-1" style="color:white">Data Set</h2>
 					<div class="row to-animate">
