--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
 
 	<div id="slider" data-section="home">
 		<div class="owl-carousel owl-carousel-fullwidth">
-		    <div class="item" style="background-image:url(images/cricket_main_background.jpg">
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
 					    <div class="col-md-7 col-sm-7">
@@ -251,7 +250,7 @@
                             Australia, India, South Africa and many others.</p>
                             <p>When batting, a team has two players on the field (called batsmen). The goal of Cricket is to score more runs that the other team. There are three main ways to earn runs: 1) the two batsmen can run between the wickets after a ball has been bowled, 2) hitting the ball past the boundary (4 runs if it passes the boundary on the ground, 6 runs if it passes the boundary in the air) and 3) penalty points from the bowling team bowling an illegal ball.</p>
                             <p>When bowling, the bowler is trying to hit one of the wickets and make the batter miss their swing. The bowling team remains on the field for either 20 overs or until 10 batsmen are out. An over is defined as six balls bowled by the bowler. There are many different ways that a batsman can get out. Some of the most common ones are: 1) The batsman misses the ball and the ball hits the wicket, 2) the ball hits the batman's body when it would have hit the wicket normally (called leg before wicket), 3) a fielder catches the ball after a batsman hits it and before the ball leaves the field and 4) if a batsman is running between wickets and a fielder hits the wicket before the runner reaches the other side.</p>
-                            <p>In the Indian Premier League, each team gets an inning to bat and an inning to be in the field. More details and further explanation of the rules can be found on the official <a href="http://www.iplt20.com">Indian Premier League website</a>.</p>
+                            <p>In the Indian Premier League, each team gets an inning to bat and an inning to be in the field. More details and further explanation of the rules can be found on the official <a href="http://www.iplt20.com" style="color:white">Indian Premier League website</a>.</p>
                             <p><a class="twitter-timeline" data-lang="en" data-width="1000" data-height="500" data-theme="light" href="https://twitter.com/IPL">Tweets by @IPL</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                             </p>    
 						</div>
