--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 
 	<div id="slider" data-section="home">
 		<div class="owl-carousel owl-carousel-fullwidth">
+		    <div class="item" style="background-image:url(images/cricket_main_background.jpg)">
 		    	<div class="container" style="position: relative;">
 		    		<div class="row">
 					    <div class="col-md-7 col-sm-7">
