--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 			<div class="row" id="about-us">
 				<div class="col-md-12 section-heading text-center">
 					<h2 class="to-animate" style="color:white">Overview</h2>
-					<div class="row">
+					<div class="row to-animate">
                         <img src="images/wikipedia_generic_cricket_pic.JPG" style="width: 50%; height: 350px;"><img src="images/mumbai_championship_espn.jpg" style="transform: scaleX(-1); width: 50%; height: 350px;">
                         </div>
                     <div class="row" style="text-align:left">
@@ -262,7 +262,7 @@
 	</div>
 	<div id="fh5co-our-services" data-section="services" style="background-color: white">
 		<div class="container">
-			<div class="row row-bottom-padded-sm">
+			<div class="row row-bottom-padded-lg">
 				<div class="col-md-12 section-heading text-center">
 					<h2 class="to-animate">Motivation</h2>
 					<div class="row to-animate">
