--- a/index.html
+++ b/index.html
@@ -12,20 +12,15 @@
 	<meta name="description" content="Indian Premier League Match Prediction Model" />
 	<meta name="keywords" content="ipl, cricket, machine learning" />
 	<meta name="author" content="Michael Neuman, Aagam Shah" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+        
+	<meta property="og:title" content="IPL Match Prediction"/>
+	<meta property="og:image" content="url(images/cricket_main_background.jpg)"/>
+	<meta property="og:url" content="neumanmt.github.io"/>
+	<meta property="og:site_name" content="neumant's github"/>
+	<meta property="og:description" content="Indian Premier League Match Prediction Model"/>
+	<meta name="twitter:title" content="IPL Match Prediction" />
+	<meta name="twitter:image" content="url(images/cricket_main_background.jpg)" />
+	<meta name="twitter:url" content="neumanmt.github.io" />
 
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
