--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 	<meta name="author" content="Michael Neuman, Aagam Shah " />
         
 	<meta property="og:title" content="IPL Match Prediction"/>
-	<meta property="og:image" content="url(images/cricket_main_background.jpg)"/>
-	<meta property="og:url" content="neumanmt.github.io"/>
-	<meta property="og:site_name" content="neumant's github"/>
+	<meta property="og:image" content="http://neumanmt.github.io/images/cricket_main_background.jpg"/>
+	<meta property="og:url" content="http://neumanmt.github.io"/>
 	<meta property="og:description" content="Indian Premier League Match Prediction Model"/>
 	<meta name="twitter:title" content="IPL Match Prediction" />
-	<meta name="twitter:image" content="url(images/cricket_main_background.jpg)" />
-	<meta name="twitter:url" content="neumanmt.github.io" />
+	<meta name="twitter:image" content="http://neumanmt.github.io/images/cricket_main_background.jpg" />
+	<meta name="twitter:url" content="http://neumanmt.github.io" />
 
   <!-- 
 	//////////////////////////////////////////////////////
