animations, need to sleep now

--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
 
 	<div id="fh5co-features" data-section="features" style="background-color: #6172F4">
 		<div class="container">
-			<div class="row to-animate">
+			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="single-animate animate-features-1" style="color:white">Data Set</h2>
+					<h2 class="to-animate" style="color:white">Data Set</h2>
 					<div class="row to-animate">
-						<div class="col-md-8 col-md-offset-2 single-animate animate-features-2" style="text-align: left">
+						<div class="col-md-8 col-md-offset-2 to-animate" style="text-align: left">
 							<p style="color:white">Our data set contains match results from the past 9 Indian Premier League Seasons. There is an instance for every single over of a given cricket match. After removing certain instances with missing attribute, our data set contained 577 matches and 21554 instances. Within each instance, there are 17 attributes with the following possible values:</p>
                             <table style="width:100%; border: 2px solid #000000; border-collapse: collapse;text-align: center">
                                 <col width="20%">
