added button for final report link

--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
                         </div>
                     <div class="row" style="text-align:left">
 						<div class="col-md-8 col-md-offset-2 to-animate"  style="color:white">
-                            <p><br/>Cricket is a game played between two teams made up of eleven players each. The game is played with a bat and ball. Players score runs by running between two sets of wooden posts called <a href="https://en.wikipedia.org/wiki/Wicket" style="color:white">wickets</a>. Cricket originated in England in the 16th century. Today it is popular in countries throughout the world including England,
+                            <p><br/>Cricket is a game played between two teams made up of eleven players each. The game is played with a bat and ball. Players score runs by running between two sets of wooden posts called <a href="https://en.wikipedia.org/wiki/Wicket" style="color:white" target="_blank">wickets</a>. Cricket originated in England in the 16th century. Today it is popular in countries throughout the world including England,
                             Australia, India, South Africa and many others.</p>
                             <p>When batting, a team has two players on the field (called batsmen). The goal of Cricket is to score more runs that the other team. There are three main ways to earn runs: 1) the two batsmen can run between the wickets after a ball has been bowled, 2) hitting the ball past the boundary (4 runs if it passes the boundary on the ground, 6 runs if it passes the boundary in the air) and 3) penalty points from the bowling team bowling an illegal ball.</p>
                             <p>When bowling, the bowler is trying to hit one of the wickets and make the batter miss their swing. The bowling team remains on the field for either 20 overs or until 10 batsmen are out. An over is defined as six balls bowled by the bowler. There are many different ways that a batsman can get out. Some of the most common ones are: 1) The batsman misses the ball and the ball hits the wicket, 2) the ball hits the batman's body when it would have hit the wicket normally (called leg before wicket), 3) a fielder catches the ball after a batsman hits it and before the ball leaves the field and 4) if a batsman is running between wickets and a fielder hits the wicket before the runner reaches the other side.</p>
-                            <p>In the Indian Premier League, each team gets an inning to bat and an inning to be in the field. More details and further explanation of the rules can be found on the official <a href="http://www.iplt20.com" style="color:white">Indian Premier League website</a>.</p>
+                            <p>In the Indian Premier League, each team gets an inning to bat and an inning to be in the field. More details and further explanation of the rules can be found on the official <a href="http://www.iplt20.com" style="color:white" target="_blank">Indian Premier League website</a>.</p>
                             <p><a class="twitter-timeline" data-lang="en" data-width="1000" data-height="500" data-theme="light" href="https://twitter.com/IPL">Tweets by @IPL</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                             </p>    
 						</div>
@@ -683,12 +683,13 @@
                         </tr>
                         <caption style="font-style: italic">Results of running Weka's lBk (k-Nearest Neighbor) Model <br/>on each individual team's dataset</caption>
                 </table>
-                        <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>It was interesting that the Rajasthan Royals achieved maximum accuracy with 5-nearest neighbors while all other teams had maximum accuracy using just 1-nearest neighbor. Again, a higher accuracy for the Gujarat Lions can be attributed to the size of the dataset. Overall, we can see that the nearest neighbor model will perform with an accuracy >81% for any given team, slighly lower than the logistic model.</div>
-					</div>
+             <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left">
+                 <br/>It was interesting that the Rajasthan Royals achieved maximum accuracy with 5-nearest neighbors while all other teams had maximum accuracy using just 1-nearest neighbor. Again, a higher accuracy for the Gujarat Lions can be attributed to the size of the dataset. Overall, we can see that the nearest neighbor model will perform with an accuracy >81% for any given team, slighly lower than the logistic model.<br/><br/>
+                <a href="https://neumanmt.github.io/IPLFinalReport.pdf" target="_blank" class="btn btn-primary btn-block" style="background-color: #6172F4; text-color:white">Download the final report</a></div>
+            </div>
+        </div>
 				</div>
             </div>
-		</div>
-
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
