--- a/index.html
+++ b/index.html
@@ -245,9 +245,8 @@
 						<div class="col-md-8 col-md-offset-2 to-animate"  style="color:white">
                             <p><br/>Cricket is a game played between two teams made up of eleven players each. The game is played with a bat and ball. Players score runs by running between two sets of wooden posts called <a href="https://en.wikipedia.org/wiki/Wicket" style="color:white" target="_blank">wickets</a>. Cricket originated in England in the 16th century. Today it is popular in countries throughout the world including England,
                             Australia, India, South Africa and many others.</p>
-                            <p>When batting, a team has two players on the field (called batsmen). The goal of Cricket is to score more runs that the other team. There are three main ways to earn runs: 1) the two batsmen can run between the wickets after a ball has been bowled, 2) hitting the ball past the boundary (4 runs if it passes the boundary on the ground, 6 runs if it passes the boundary in the air) and 3) penalty points from the bowling team bowling an illegal ball.</p>
-                            <p>When bowling, the bowler is trying to hit one of the wickets and make the batter miss their swing. The bowling team remains on the field for either 20 overs or until 10 batsmen are out. An over is defined as six balls bowled by the bowler. There are many different ways that a batsman can get out. Some of the most common ones are: 1) The batsman misses the ball and the ball hits the wicket, 2) the ball hits the batman's body when it would have hit the wicket normally (called leg before wicket), 3) a fielder catches the ball after a batsman hits it and before the ball leaves the field and 4) if a batsman is running between wickets and a fielder hits the wicket before the runner reaches the other side.</p>
-                            <p>In the Indian Premier League, each team gets an inning to bat and an inning to be in the field. More details and further explanation of the rules can be found on the official <a href="http://www.iplt20.com" style="color:white" target="_blank">Indian Premier League website</a>.</p>
+                            <p>When batting, a team has two players on the field (called batsmen). The goal of Cricket is to score more runs that the other team. Players earn runs through hitting the ball past a boundary or by running between wickets. When bowling, the bowler is trying to hit one of the wickets and make the batter miss their swing. The bowling team remains on the field for either 20 overs or until 10 batsmen are out. An over is defined as six balls bowled by the bowler. A batsman is out if the ball hits a wicket either from a missed swing or while a batsman is running between two wickets, or if the ball is caught in midair following a hit.</p>
+                            <p>The Indian Premier League Twenty20 League was started in 2008 by <a href="http://www.bcci.tv/" style="color:white">The Board of Control for Cricket in India (BCCI)</a>. In the 2017 season, there were eight active teams: Delhi Daredeviles, Kings Xi Punjab, Kolkata Knight Riders, Mumbai Indians, Royal Challengers Bangalore, Sunrisers Hyderabad, Rising Pune Supergiant and the Gujarat Lions. Over the course of a season, each team plays each other twice, once as the home team and once as the away team. At the end of the season, the top four teams in the league qualify for the Playoffs. The 2017 IPL Championship was one of the most exciting games seen in league history with <a href="http://www.espncricinfo.com/indian-premier-league-2017/content/story/1098739.html" style="color:white;" target="_blank">the Mumbai Indians defeating the Rising Pune Supergiant by only ONE RUN to win their third title.</a> More details about the league's history and further explanation of the rules can be found on the official <a href="http://www.iplt20.com" style="color:white" target="_blank">Indian Premier League website</a>.</p>
                             <p><a class="twitter-timeline" data-lang="en" data-width="1000" data-height="500" data-theme="light" href="https://twitter.com/IPL">Tweets by @IPL</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                             </p>    
 						</div>
@@ -412,7 +411,7 @@
 					<h2 class="single-animate animate-pricing-1">Results</h2>
                     <div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<p style="text-align: left">To build our models, we split up our dataset into 13 separate csv files, one for each team in the Indian Premier League. Note the discrepencies in number of instances is due to certain teams playing different number of matches each season. The Kochi Tuskers Kerla, Deccan Chargers and Pune Warriors all left the league in 2011, 2012 and 2013 respectively. We decided to keep them within our data set as the teams have the possibility of returning to the league. The Chennai Super Kings and Rajasthan Royals were banned for the 2016 and 2017 seasons but will return in 2018.</p>
+							<p style="text-align: left">To build our models, we split up our dataset into 13 separate csv files, one for each team in the Indian Premier League. We decided to remove two teams' datasets (Kochi Tuskers Kerala and Rising Pune Supergiant) due to multiple problems with data (small number of instances, missing attributes). Note the discrepencies in number of instances is due to certain teams playing different number of matches each season. The Deccan Chargers and Pune Warriors left the league in 2012 and 2013 respectively. We decided to keep them within our data set as the teams have the possibility of returning to the league. The Chennai Super Kings and Rajasthan Royals were banned for the 2016 and 2017 seasons but will return in 2018.</p>
 						</div>
                     <table align="center" style="width:50%; background-color: white; text-align: center; border: 2px solid #000000; border-collapse: collapse;">
                         <col width="50%">
@@ -468,7 +467,7 @@
                         <caption style="font-style: italic">Number of instances for each individual team dataset (there were 21554 total instances)</caption>
                 </table>
 			</div>
-                </div>
+                    <br/><br/>
 					<div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
 							<p style="text-align:left;">We first trained a Logistic Regression model. We removed instances where it was the 2nd inning and after the 14th over to be used as a testing set. Thus our model offers a prediction of a match based on information obtained from the first inning and the first 14 overs of the second, meaning our accuracy results will be higher than a random match prediction made based only on a given pair of teams. Our accuracy results are displayed in a table below along with the highest positive and negative absolute value coefficients for team2. This translates to the teams that team1 performs best (positive) and worst (negative) against.<br/></p>
@@ -552,11 +551,10 @@
                         </tr>
                         <caption style="font-style: italic">Results of running Weka's Logistic Regression Model on each individual team's dataset</caption>
                 </table>
-                    <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>Some interesting results: The Chennai Super Kings did not have a strong advantage against a single given team (all team weights were between -1 and 1) while the Kolkata Knight Riders had a strong disadvantage against the Rajasthan Royals (coefficent of -375.5865). We attribute the large variance in data due to the small number of unique matches. For example, the Gurajart Lions and Delhi Daredevils have only played in two matches. Because the Delhi Daredevils won both matches, there was a larger negative coefficient assigned to the team2 variable. As the dataset grows with more Indian Premier League seasons happening, we would expect the coefficients to become closer to 0, with variations depending on records between a given pair of teams. Overall, we can see that the logistic model will perform with an accuracy >83% for any given team, meaning we can confidently predict the winner of a match if we have information from the early overs. </div>
-                    </div>
+                         <br/><br/>
 					<div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
-							<p style="text-align:left;"><br/>Next we trained each dataset on Weka's NaiveBayes model. We noticed a higher variance in results.</p>
+							<p style="text-align:left;"><br/>Next we trained each dataset on Weka's NaiveBayes model, performing the same data split as used on our Logistic Regression model. Our accuracy results are displayed in a table below.</p>
 						</div>
                     <table align="center" style="width:45%; background-color: white; text-align: center; border: 2px outset #6172F4;">
                         <col width="50%">
@@ -611,11 +609,10 @@
                         </tr>
                         <caption style="font-style: italic">Results of running Weka's NaiveBayes Model on each individual team's dataset</caption>
                 </table>
-                        <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>The 100% accuracy associated with Gujarat Lions can be attributed to the small size of the match dataset. We noticed that most of the accuracies obtained using NaiveBayes were lower than our other models. Overall, we can see that the Naive Bayes model will perform with an accuracy >61% for any given team, not a very confident finding.</div>
-					</div>
+                    <br/><br/>
                     <div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
-							<p style="text-align:left;"><br/>We then tried k-nearest neighbor, running cross-validation to find the optimal k value to achieve highest accuracy.</p>
+							<p style="text-align:left;"><br/>Next we trained each dataset on Weka's lBk (k-nearest neighbor) model. We ran cross-validation to find the optimal k value for highest accuracy. Our accuracy results and optimal k value results are displayed in a table below.</p>
 						</div>
                     <table align="center" style="width:40%; background-color: white; text-align: center; border: 2px outset #6172F4;">
                         <col width="50%">
@@ -683,10 +680,31 @@
                         </tr>
                         <caption style="font-style: italic">Results of running Weka's lBk (k-Nearest Neighbor) Model <br/>on each individual team's dataset</caption>
                 </table>
-             <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left">
-                 <br/>It was interesting that the Rajasthan Royals achieved maximum accuracy with 5-nearest neighbors while all other teams had maximum accuracy using just 1-nearest neighbor. Again, a higher accuracy for the Gujarat Lions can be attributed to the size of the dataset. Overall, we can see that the nearest neighbor model will perform with an accuracy >81% for any given team, slighly lower than the logistic model.<br/><br/>
+                        <br/><br/>
+                        </div>
+                    <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>After running each of our models, we obtained some interesting results:
+                        <ul>
+                            <h3 style="font-weight: bold;">Logistic Model Findings</h3> 
+                            <li>Chennai Super Kings did not have a strong advantage against any single given team (all team weights were between -1 and 1)</li>
+                            <li>Kolkata Knight Riders had a strong disadvantage against the Rajasthan Royals (coefficient of -375.5865)</li>
+                            <li>Large variance in data due to the small number of unique matches (577). The league has only been around for 10 seasons and there has been volatility in team participation. As the league continues, more consistent data can be collected and used to better improve the model. Our hypothesis is that as the teams play each other more often, the coefficients of team variables will decrease in importance and move closer to zero with variations depending on records between a given pair of teams</li>
+                            <li>Similarly the Gurajat Lions and Delhi Daredevils have only played in two matches which the Delhi Daredevils both won. This explains the large negative coefficient assigned (-34.061).</li>
+                            <li>Overall, we can see that the logistic model will perform with an accuracy >83% for any given team, meaning we can confidently predict the winner of a match if we have information from the early overs</li>
+                            <br/>
+                            <h3 style="font-weight: bold;">Naive Bayes Model Findings</h3>
+                            <li>The 100% accuracy obtained on the Gujarat Lions can be attributed to the small size of the match dataset (231 instances) compared to all other datasets (on average, ~2132 instances)</li>
+                            <li>With the exception of the Gujarat Lions dataset, all other NaiveBayes models were outperformed by the Logistic Regression model</li>
+                            <br/>
+                            <h3 style="font-weight: bold;">k-Nearest Neighbor Model Findings</h3>
+                            <li>The Rajasthan Royals were the only team to achieve maximum accuracy with k &ne; 1</li>
+                            <li>The Gujarat Lions model's higher accuracy can again be attributed to small dataset size</li>
+                            <li>Results were comparable to the Logistic Regression model with 45.45% of team dataset's outperforming</li>
+                        </ul>
+                        <br/>
                 <a href="https://neumanmt.github.io/IPLFinalReport.pdf" target="_blank" class="btn btn-primary btn-block" style="background-color: #6172F4; text-color:white">Download the final report</a></div>
             </div>
+
+                
         </div>
 				</div>
             </div>
