--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                     <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>After running each of our models, we obtained some interesting results:
                         <ul>
                             <h3 style="font-weight: bold;">Logistic Model Findings</h3> 
-                            <li>Chennai Super Kings did not have a strong advantage against any single given team (all team weights were between -1 and 1)</li>
+                            <li>Chennai Super Kings did not have a strong advantage or disadvantage against any single given team (all team weights were between -1 and 1)</li>
                             <li>Kolkata Knight Riders had a strong disadvantage against the Rajasthan Royals (coefficient of -375.5865)</li>
                             <li>Large variance in data due to the small number of unique matches (577). The league has only been around for 10 seasons and there has been volatility in team participation. As the league continues, more consistent data can be collected and used to better improve the model. Our hypothesis is that as the teams play each other more often, the coefficients of team variables will decrease in importance and move closer to zero with variations depending on records between a given pair of teams</li>
                             <li>Similarly the Gurajat Lions and Delhi Daredevils have only played in two matches which the Delhi Daredevils both won. This explains the large negative coefficient assigned (-34.061).</li>
