--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 					<h2 class="to-animate" style="color:white">Data Set</h2>
 					<div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 to-animate" style="text-align: left">
-							<p style="color:white">Our data set contains match results from the past 9 Indian Premier League Seasons. There is an instance for every single over of a given cricket match. After removing certain instances with missing attribute, our data set contained 577 matches and 21554 instances. Within each instance, there are 17 attributes with the following possible values:</p>
+							<p style="color:white">Our data set contains match results from the past 9 Indian Premier League Seasons. There were initially 136499 instances with 21 attributes where is an instance is a single bowl in a match. After removing certain instances with missing attributes and removing irrelavant attributes, our final data set contained 577 matches and 21554 instances. Within each instance, there we specified 14 attributes with the following possible values:</p>
                             <table style="width:100%; border: 2px solid #000000; border-collapse: collapse;text-align: center">
                                 <col width="20%">
                                 <col width="20%">
@@ -311,40 +311,31 @@
                                 <th style="text-align: center">Possible Input Values</th>
                               </tr>
                               <tr style="background-color: white">
-                                <td>match_id</td>
-                                <td>unique match identifier</td> 
-                                <td>whole numbers (1-577)</td>
-                              </tr>
-                              <tr style="background-color: #dddddd">
                                 <td>inning</td>
                                 <td>current inning of given match</td> 
                                 <td>1 or 2</td>
                               </tr>
-                                <tr style="background-color: white">
+                                <tr style="background-color: #dddddd">
                                 <td>over</td>
                                 <td>current over of <br/>given inning</td> 
                                 <td>whole numbers (1-20)</td>
                               </tr>
-                                <tr style="background-color: #dddddd">
-                                <td>team1, team2, batting_team</td>
+                                <tr style="background-color: white">
+                                <td>team1, team2</td>
                                 <td>team variables of a given match</td> 
                                 <td>Chennai Super kings, Deccan Chargers, Delhi Daredevils, Gujarat Lions, Kings Xi Punjab, Kochi Tuskers Kerala, Kolkata Knight Riders, Mumbai Indains, Pune Warriors, Rajasthan Royals, Rising Pune Supergiants, Royal Challengers Bangalore, Sunrisers Hyderabad<br/>(13 teams, 8 currently active)</td>
                               </tr>
-                                <tr style="background-color: white">
+                                <tr style="background-color: #dddddd">
                                 <td>total_runs</td>
                                 <td>number of runs scored in given over</td> 
                                 <td>whole numbers</td>
                               </tr>
-                                <tr style="background-color: #dddddd">
+                                <tr style="background-color: white">
                                 <td>player_dismissed</td>
                                 <td>number of wickets in a given over</td> 
                                 <td>whole numbers (maximum of 10)</td>
                             </tr>
-                                <tr style="background-color: white">
-                                <td>innings_wickets</td>
-                                <td>total number of wickets in a<br/>given inning</td> 
-                                <td>whole numbers (maximum of 10)</td>
-                              </tr>
+
                                 <tr style="background-color: #dddddd">
                                 <td>innings_score</td>
                                 <td>total number of<br/> runs scored in a<br/> given inning</td> 
@@ -380,12 +371,7 @@
                                 <td>whether team1 is currently batting or not</td> 
                                 <td>1 if team1 is batting, 0 if team2 is batting</td>
                               </tr>
-                                <tr style="background-color: white">
-                                <td>target</td>
-                                <td>whether eventual winner is currently winning</td> 
-                                <td>1 if winner is winning during given over, 0 otherwise</td>
-                              </tr>
-                                <tr style="background-color: #dddddd; font-weight: bold;">
+                                <tr style="background-color: white; font-weight: bold;">
                                 <td>CLASSIFICATION:<br/>winner </td>
                                 <td>team variable of team that won a given match</td> 
                                 <td>team1, team2</td>
@@ -399,7 +385,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
-					<a href="https://www.kaggle.com/manasgarg/ipl/downloads/matches.csv" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Link to data set</a>
+					<a href="https://www.kaggle.com/manasgarg/ipl" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Link to data set</a>
 				</div>
 			</div>
 		</div>
@@ -472,16 +458,16 @@
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
 							<p style="text-align:left;">We first trained a Logistic Regression model. We removed instances where it was the 2nd inning and after the 14th over to be used as a testing set. Thus our model offers a prediction of a match based on information obtained from the first inning and the first 14 overs of the second, meaning our accuracy results will be higher than a random match prediction made based only on a given pair of teams. Our accuracy results are displayed in a table below along with the highest positive and negative absolute value coefficients for team2. This translates to the teams that team1 performs best (positive) and worst (negative) against.<br/></p>
 						</div>
-                    <table align="center" style="width:80%; background-color: white; text-align: center; border: 2px outset #6172F4;">
+                    <table align="center" style="width:100%; background-color: white; text-align: center; border: 2px outset #6172F4;">
                         <col width="25%">
                         <col width="15%">
                         <col width="30%">
                         <col width="30%">
                           <tr>
-                            <th style="text-align:center;">Team1 Value</th>
-                            <th style="text-align:center;">Accuracy</th>
-                            <th style="text-align:center;">Highest Weighted Positive team2</th>
-                            <th style="text-align:center;">Highest Weighted Negative team2</th> 
+                            <th style="text-align:center;">Team</th>
+                            <th style="text-align:center;">Logistic Regression Accuracy</th>
+                            <th style="text-align:center;">Highest Weighted Positive attribute</th>
+                            <th style="text-align:center;">Highest Weighted Negative attribute</th> 
                           </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Chennai Super Kings</td>
@@ -688,7 +674,7 @@
                             <li>Chennai Super Kings did not have a strong advantage or disadvantage against any single given team (all team weights were between -1 and 1)</li>
                             <li>Kolkata Knight Riders had a strong disadvantage against the Rajasthan Royals (coefficient of -375.5865)</li>
                             <li>Large variance in data due to the small number of unique matches (577). The league has only been around for 10 seasons and there has been volatility in team participation. As the league continues, more consistent data can be collected and used to better improve the model. Our hypothesis is that as the teams play each other more often, the coefficients of team variables will decrease in importance and move closer to zero with variations depending on records between a given pair of teams</li>
-                            <li>Similarly the Gurajat Lions and Delhi Daredevils have only played in two matches which the Delhi Daredevils both won. This explains the large negative coefficient assigned (-34.061).</li>
+                            <li>Similarly the Gurajat Lions and Delhi Daredevils have only played in two matches which the Delhi Daredevils both won. This explains the large negative coefficient assigned (-34.061)</li>
                             <li>Overall, we can see that the logistic model will perform with an accuracy >83% for any given team, meaning we can confidently predict the winner of a match if we have information from the early overs</li>
                             <br/>
                             <h3 style="font-weight: bold;">Naive Bayes Model Findings</h3>
