--- a/index.html
+++ b/index.html
@@ -459,85 +459,112 @@
 							<p style="text-align:left;">We first trained a Logistic Regression model. We removed instances where it was the 2nd inning and after the 14th over to be used as a testing set. Thus our model offers a prediction of a match based on information obtained from the first inning and the first 14 overs of the second, meaning our accuracy results will be higher than a random match prediction made based only on a given pair of teams. Our accuracy results are displayed in a table below along with the highest positive and negative absolute value coefficients for team2. This translates to the teams that team1 performs best (positive) and worst (negative) against.<br/></p>
 						</div>
                     <table align="center" style="width:100%; background-color: white; text-align: center; border: 2px outset #6172F4;">
-                        <col width="25%">
                         <col width="15%">
-                        <col width="30%">
-                        <col width="30%">
+                        <col width="12.5%">
+                        <col width="12.5%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
                           <tr>
                             <th style="text-align:center;">Team</th>
+                            <th style="text-align:center;">Maximum attribute (LR)</th>
+                            <th style="text-align:center;">Minimum attribute (LR)</th>
                             <th style="text-align:center;">Logistic Regression Accuracy</th>
-                            <th style="text-align:center;">Highest Weighted Positive attribute</th>
-                            <th style="text-align:center;">Highest Weighted Negative attribute</th> 
+                            <th style="text-align:center;">Naive Bayes Accuracy</th>
+                            <th style="text-align:center;">k-Nearest Neighbor Accuracy</th>
                           </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Chennai Super Kings</td>
-                            <td>89.09%</td>
                             <td>Pune Warriors (0.9591)</td>
                             <td>Sunrisers Hyderabad (-0.4952)</td>
+                            <td>89.09%</td>
+                            <td>80.78%</td>
+                            <td>84.42%</td>
                         </tr>
                         <tr>
                             <td>Deccan Chargers</td>
-                            <td>87.27%</td>
                             <td>Kolkata Knight Riders (16.4045)</td>
                             <td>Kochi Tuskers Kerala (-22.958)</td>
+                            <td>87.27%</td>
+                            <td>81.36%</td>
+                            <td>87.73%</td>
                         </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Delhi Daredevils</td>
-                            <td>86.96%</td>
                             <td>Rising Pune Supergiants (21.148)</td>
                             <td>Pune Warriors (-22.4644)</td>
+                            <td>86.96%</td>
+                            <td>82.21%</td>
+                            <td>83.00%</td>
                         </tr>
                         <tr>
                             <td>Gujarat Lions</td>
-                            <td>88.89%</td>
                             <td>Sunrisers Hyderabad (27.9906)</td>
                             <td>Delhi Daredevils (-34.061)</td>
+                            <td>88.89%</td>
+                            <td>100.00%</td>
+                            <td>96.30%</td>
                         </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Kolkata Knight Riders</td>
-                            <td>87.85%</td>
                             <td>Pune Warriors (26.0993)</td>
                             <td>Rajasthan Royals (-375.5865)</td>
+                            <td>87.85%</td>
+                            <td>79.86%</td>
+                            <td>85.07%</td>
                         </tr>
                         <tr>
                             <td>Kings Xi Punjab</td>
-                            <td>83.38%</td>
                             <td>Rising Pune Supergiants (56.6141)</td>
                             <td>Deccan Chargers (-2.8154)</td>
+                            <td>83.38%</td>
+                            <td>61.23%</td>
+                            <td>86.77%</td>
                         </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Mumbai Indians</td>
-                            <td>93.77%</td>
                             <td>Kochi Tuskers Kerala (22.0244)</td>
                             <td>Pune Warriors (-39.4622)</td>
+                            <td>93.77%</td>
+                            <td>86.75%</td>
+                            <td>90.39%</td>
                         </tr>
                         <tr>
                             <td>Pune Warriors</td>
-                            <td>86.14%</td>
                             <td>Royal Challengers Bangalore (65.331)</td>
                             <td>Mumbai Indians (-9.166)</td>
+                            <td>86.14%</td>
+                            <td>77.23%</td>
+                            <td>89.11%</td>
                         </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Royal Challengers Bangalore</td>
-                            <td>83.55%</td>
                             <td>Kolkata Knight Riders (19.7319)</td>
                             <td>Rising Pune Supergiants(-41.0558)</td>
+                            <td>83.55%</td>
+                            <td>64.80%</td>
+                            <td>85.53%</td>
                         </tr>
                         <tr>
                             <td>Rajasthan Royals</td>
-                            <td>87.55%</td>
                             <td>Kochi Tuskers Kerala (18.8983)</td>
                             <td>Deccan Chargers (-1.5471)</td>
+                            <td>87.55%</td>
+                            <td>80.93%</td>
+                            <td>87.16%</td>
                         </tr>
                         <tr style="background-color: #6172F4; color: white;">
                             <td>Sunrisers Hyderabad</td>
-                            <td>87.22%</td>
                             <td>Pune Warriors (15.6221)</td>
                             <td>Royal Challengers Bangalore (-1.9229)</td>
+                            <td>87.22%</td>
+                            <td>72.22%</td>
+                            <td>81.67%</td>
                         </tr>
-                        <caption style="font-style: italic">Results of running Weka's Logistic Regression Model on each individual team's dataset</caption>
                 </table>
                          <br/><br/>
+                        <!--
 					<div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
 							<p style="text-align:left;"><br/>Next we trained each dataset on Weka's NaiveBayes model, performing the same data split as used on our Logistic Regression model. Our accuracy results are displayed in a table below.</p>
@@ -667,11 +694,12 @@
                         <caption style="font-style: italic">Results of running Weka's lBk (k-Nearest Neighbor) Model <br/>on each individual team's dataset</caption>
                 </table>
                         <br/><br/>
+-->
                         </div>
                     <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>After running each of our models, we obtained some interesting results:
                         <ul>
                             <h3 style="font-weight: bold;">Logistic Model Findings</h3> 
-                            <li>Chennai Super Kings did not have a strong advantage or disadvantage against any single given team (all team weights were between -1 and 1)</li>
+                            <li>Chennai Super Kings did not have a strong advantage or disadvantage against any single given team (all team weights were between -1 and 1).</li>
                             <li>Kolkata Knight Riders had a strong disadvantage against the Rajasthan Royals (coefficient of -375.5865)</li>
                             <li>Large variance in data due to the small number of unique matches (577). The league has only been around for 10 seasons and there has been volatility in team participation. As the league continues, more consistent data can be collected and used to better improve the model. Our hypothesis is that as the teams play each other more often, the coefficients of team variables will decrease in importance and move closer to zero with variations depending on records between a given pair of teams</li>
                             <li>Similarly the Gurajat Lions and Delhi Daredevils have only played in two matches which the Delhi Daredevils both won. This explains the large negative coefficient assigned (-34.061)</li>
