added future work

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 		            <li><a href="#" data-nav-section="services"><span>Motivation</span></a></li>
 		            <li><a href="#" data-nav-section="features"><span>Data Set</span></a></li>
 		            <li><a href="#" data-nav-section="pricing"><span>Results</span></a></li>
+                    <li><a href="#" data-nav-section="press"><span>Future Work</span></a></li>
 		          </ul>
 		        </div>
 			    </nav>
@@ -721,8 +722,22 @@
 
                 
         </div>
+    </div>
+</div>
+ <div id="fh5co-press" data-section="press" style="background-color: #6172F4">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 section-heading text-center">
+					<h2 class="single-animate animate-press-1" style="color:white">Future Work</h2>
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-press-2">
+							<p style="color:white;text-align:left">Our model only offers predictions based off previous knowledge of statistics from a given match. One possible area for exploration would be to develop a prediction model to take in two specific teams and give the probability that each team could win prior to a match. Looking even deeper, it would be great if a probabilistic model could be used in real-time to see a team's probability during a given match. As the Indian Premier League continues to grow in size and continues through more and more seasons, the right time for developing a great prediction model is sooner rather than later.</p>
+						</div>
+					</div>
 				</div>
             </div>
+		</div>
+	</div>
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
