--- a/index.html
+++ b/index.html
@@ -382,11 +382,10 @@
 					</div>
 				</div>
 			</div>
-				<div class="clearfix visible-sm-block visible-xs-block"></div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
-					<a href="https://www.kaggle.com/manasgarg/ipl" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Link to data set</a>
+					<a href="https://www.kaggle.com/manasgarg/ipl" target="_blank" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Link to data set</a>
 				</div>
 			</div>
 		</div>
@@ -716,15 +715,14 @@
                             <li>The Gujarat Lions model's higher accuracy can again be attributed to small dataset size</li>
                             <li>Results were comparable to the Logistic Regression model with 5 out of 11 teams' datasets outperforming</li>
                         </ul>
-                        <br/>
-                <a href="https://neumanmt.github.io/IPLFinalReport.pdf" target="_blank" class="btn btn-primary btn-block" style="background-color: #6172F4; text-color:white">Download the final report</a></div>
             </div>
 
                 
         </div>
     </div>
 </div>
- <div id="fh5co-press" data-section="press" style="background-color: #6172F4">
+
+<div id="fh5co-press" data-section="press" style="background-color: #6172F4">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
@@ -733,11 +731,20 @@
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-press-2">
 							<p style="color:white;text-align:left">Our model only offers predictions based off previous knowledge of statistics from a given match. One possible area for exploration would be to develop a prediction model to take in two specific teams and give the probability that each team could win prior to a match. Looking even deeper, it would be great if a probabilistic model could be used in real-time to see a team's probability during a given match. As the Indian Premier League continues to grow in size and continues through more and more seasons, the right time for developing a great prediction model is sooner rather than later.</p>
 						</div>
+                       
 					</div>
+                    <br/><br/>
+                     </div>
 				</div>
-            </div>
-		</div>
-	</div>
+        </div>
+        <div class="row">
+        <div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
+            <a href="https://neumanmt.github.io/IPLFinalReport.pdf" target="_blank" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Download the final report</a>
+        </div>
+    </div>
+    </div>
+
+</div>
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
