--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                             <h3 style="font-weight: bold;">Naive Bayes Model Findings</h3>
                             <li>The 100% accuracy obtained on the Gujarat Lions can be attributed to the small size of the match dataset (231 instances) compared to all other datasets (on average, ~2132 instances)</li>
                             <li>With the exception of the Gujarat Lions dataset, all other NaiveBayes models were outperformed by the Logistic Regression model</li>
-                            <li>A NaiveBayes model doesn't completely make sense for our given context as certain parameters are not independent of each other (run_rate_diff).</li>
+                            <li>A NaiveBayes model doesn't completely make sense for our given context as certain parameters are not independent of each other (run_rate_diff)</li>
                             <br/>
                             <h3 style="font-weight: bold;">k-Nearest Neighbor Model Findings</h3>
                             <li>The Rajasthan Royals were the only team to achieve maximum accuracy with k &ne; 1 (accuracy was obtained at k = 5)</li>
